	Bugfix point release. Bug(s) fixed:
	- We should BlockHeapFree clients when they've exited. (#26)
	- STATS z implementation. (#17)
2007-06-28 - 1.0.16
	Bugfix point release. Bug(s) fixed:
	- Now that we properly free clients we should delete their IDs (Fixes
		crash).
2007-07-09 - 1.0.17
	Bugfix point release. Bug(s) fixed:
	- db_log shouldn't act like ilog, remove L_CRIT (Fixes crash on db going
	away).
	- add db_reopen_log() which i was sure already existed, but apparently
		didnt. (#52)
2007-07-?? - 1.0.18
	Bugfix point release. Bug(s) fixed:
	- Don't check access level on channel mode change, just do what the server
		tells us. Also fix a bug in the mode callback. (#32)

2007-??-?? - 1.1.0
	Feature/Bugfix release.
	- Fix inconsistency in SQL statements used to deal with channel masters on
		access lists. (#1)
	- Rework GET_AKICKS query to not join on channel and just use the id
		directly, since that's what we use most and the name we have elsewhere
		anyway. (#5)
	- Allow NULL hostname to be specified for database{} connection to use the
		system default to the database driver. (#21)
	- Set Precedence: junk on outgoing mail. (#2)
	- Add floodserv flag to chanserv's info. (#30)
	- Removed stray tab in HELP_SET_PRIVATE_LONG. (#27)
	- Add status command to nickserv. (#3)
	- Fix nickserv status.
	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
	- Enforced nicknames shouldn't be opers or admins, also set realname to
		sensible things if so desired. (#34)
	- STATS spy notice. (#17)
	- FloodServ now uses BlockHeap, now you can monitor usage in STATS z
	- Actually implement chanserv verbose, instead of pretending that we do.
		(#50)
	- Add various ORDER BY clauses to help with listing and delete by index.
		(#39)
	- Add CLEAR QUIETS, UNQUIET, and remove quiets in EXPIREBANS. (#25)
	- FloodServ clears up +q's on it's own, FloodServ GC iterates only FS
		channels more often and all valid channels. (#6)
	- ChanServ CLEAR MODES implemented. (#33)