@@ -140,3 +140,5 @@
 	- FloodServ clears up +q's on it's own, FloodServ GC iterates only FS
 		channels more often and all valid channels. (#6)
 	- ChanServ CLEAR MODES implemented. (#33)
+	- FloodServ uses much less memory on startup, use dlink_list instead of
+		array
